styles/style.css
@charset "UTF-8";
@import url('https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap');

body, ul, li, p {
    font-family: arial;
    font-size: 1.2em;
    list-style: none;
    margin: 0px;
    padding: 0px;
}

body {
    margin-bottom: 100px;
}

header {
    background-color: rgb(30, 35, 35);
    color: whitesmoke;

}

h1 {
    margin: 0px;
    text-align: center;
    font-size: 1.3em;
}

h2 {
    margin: 0px;
    padding-top: 50px;
    font-family: Zen Maru Gothic, Helvetica, sans-serif;
}

a {
    text-decoration: none;
    color: white;
}

header p {
    font-size: 0.8em;

}


.ulNav {
    display: flex;
    padding: 20px;
    justify-content: space-around;
    flex-wrap: wrap;
    align-items: center;
}

.intro {
    color: white;
    background-color: rgb(30, 35, 35);
    padding-bottom: 10px;
    margin-bottom: 10px;
}

.redesSociais {
    display: flex;
    justify-content: space-between;
    max-width: 200px;
    padding-bottom: 5px;
    padding-top: 5px;
}

.redesSociais img {
    max-width: 50px;
    padding: 5px;

}
#pFrontEnd {
    display: block;
}
#introText {
    color: white;
    max-width: 600px;
}

#faceScreen {
    background-color: rgb(30, 35, 35);

}

